# IFLOW

./: CMakeLists.txt  LICENSE.TXT  README.md  build.sh  setup.sh
benchmarks/aws-stm-tests50/apiMisuse/: amazonAPIMisuse.txt  amazonAPIMisuse2.txt  infoflowstats.txt
benchmarks/aws-stm-tests50/boundexp2/: infoflowstats.txt  run.sh
benchmarks/aws-stm-tests50/leakQueries/: amazonLeakQueries.txt  amazonPublishLeaks.txt
benchmarks/aws-stm-tests50/maxTimeAPI/: infoflowstats.txt
benchmarks/aws-stm-tests50/mbedAPIMisuse/: sanitizationQueries.txt
include/DDA/: DDAStat.h  DDAVFSolver.h
include/InfoFlow/: FlowAnalyzer.h  InfoFlow.h  InfoFlow.h.save  InfoFlow.h.save.1  Query.h
include/MSSA/: SVFG.h  SVFGOPT.h  SVFGStat.h
include/MemoryModel/: PAGNode.h  PointerAnalysis.h
include/SABER/: ConsttimeChecker.h  SrcSnkDDA.h
include/Util/: ICFG.h  PTAStat.h  VFG.h
include/WPA/: WPAStat.h
lib/: CMakeLists.txt  CMakeLists.txt.old  Makefile
lib/DDA/: DDAPass.cpp  DDAStat.cpp  DDAStat.cpp.save
lib/InfoFlow/: FlowAnalyzer.cpp  InfoFlow.cpp  Query.cpp
lib/MSSA/: SVFG.cpp  SVFGOPT.cpp  SVFGStat.cpp
lib/MTA/: MTA.cpp
lib/MemoryModel/: PAGBuilder.cpp  PointerAnalysis.cpp
lib/SABER/: ConsttimeChecker.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp
lib/Util/: ExtAPI.cpp  PTAStat.cpp  VFG.cpp
lib/WPA/: Andersen.cpp  FlowSensitive.cpp  FlowSensitiveStat.cpp
test/: callgraph_final.dot
tools/: CMakeLists.txt  CMakeLists.txt.old
tools/ConcModelExtraction/: CMakeLists.txt
tools/FeatureExtraction/: CMakeLists.txt  featureExtract.cpp
tools/MTA/: mta.cpp
(+883 files in other folders)
